[Fix] #69054 Fix for selfservice, Caption case binding for extended case

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -107,6 +107,7 @@
             SourceId: "CaseDataModel_RegistrationSourceCustomer_Id",
             log_InternalText: "CaseDataModel_Text_Internal",
             CostCentre: "CaseDataModel_CostCentre",
+            Caption: "CaseDataModel_Caption"
         },
 
         caseInitValues: {
