--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseReceipt.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseReceipt.cshtml
@@ -578,7 +578,7 @@
                                 <div class="col-md-3"></div>
                                 <div class="col-md-8">
                                     <div id="CaseLogPartial" class="onpage com-list">
-                                        @Html.Partial("_CaseLogNote", Model.GetCaseLogModel())
+                                        @Html.Partial("_CaseLogNote", Model.CaseLogModel)
                                     </div>
                                 </div>
                             </div>
@@ -596,7 +596,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div id="CaseLogPartial" class="onpage com-list">
-                        @Html.Partial("_CaseLogNote", Model.GetCaseLogModel())
+                        @Html.Partial("_CaseLogNote", Model.CaseLogModel)
                     </div>
                 </div>
             </div>
