#69348 - Access to mobile

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/footer/footer.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/footer/footer.component.html
@@ -1,33 +1,33 @@
 <mbsc-form>
-<mbsc-bottom-nav [options]="bottomMenuSettings">
-    <mbsc-nav-item data-icon="fa-home" (click)="goTo('/')" translate>Hem</mbsc-nav-item>
-    <mbsc-nav-item data-icon="fa-plus" (click)="newCasePopup.instance.show()" [disabled]="templateNodes.length === 0 "  translate>Lägg till</mbsc-nav-item>
-    <mbsc-nav-item data-icon="fa-list" (click)="caseSearchPopup.instance.show()" translate>Översikt</mbsc-nav-item>
-    <mbsc-nav-item data-icon="fa-globe" [disabled]="!languageId && !isLoadingLanguage" (click)="openLanguages()" translate>Språk</mbsc-nav-item>
-    <mbsc-nav-item data-icon="fa-power-off" (click)="logout()" translate>Logga ut</mbsc-nav-item>
-</mbsc-bottom-nav>
+  <mbsc-bottom-nav [options]="bottomMenuSettings">
+      <mbsc-nav-item data-icon="fa-home" (click)="goTo('/')" translate>Hem</mbsc-nav-item>
+      <mbsc-nav-item data-icon="fa-plus" (click)="createCase()" [disabled]="!(canCreateCases$ | async)"  translate>Lägg till</mbsc-nav-item>
+      <mbsc-nav-item data-icon="fa-list" (click)="goToOverview()" translate>Översikt</mbsc-nav-item>
+      <mbsc-nav-item data-icon="fa-globe" [disabled]="!languageId && !isLoadingLanguage" (click)="openLanguages()" translate>Språk</mbsc-nav-item>
+      <mbsc-nav-item data-icon="fa-power-off" (click)="logout()" translate>Logga ut</mbsc-nav-item>
+  </mbsc-bottom-nav>
 
-<mbsc-select [(ngModel)]="languageId" [options]="languagesSettings" #languages hidden></mbsc-select>
+  <mbsc-select [(ngModel)]="languageId" [options]="languagesSettings" #languages hidden></mbsc-select>
 
-<mbsc-popup [options]="popupMenuSettings" #caseSearchPopup="mobiscroll">  
-    <mbsc-listview [options]="menuListSettings">
-        <mbsc-listview-item (click)="goToCases(searchType.AllCases)" translate>Alla ärenden</mbsc-listview-item>
-        <mbsc-listview-item (click)="goToCases(searchType.MyCases)" translate>Mina ärenden</mbsc-listview-item>
-    </mbsc-listview>  
-</mbsc-popup>
+  <mbsc-popup [options]="popupMenuSettings" #caseSearchPopup="mobiscroll">  
+      <mbsc-listview [options]="menuListSettings">
+          <mbsc-listview-item (click)="goToCases(searchType.AllCases)" translate>Alla ärenden</mbsc-listview-item>
+          <mbsc-listview-item (click)="goToCases(searchType.MyCases)" translate>Mina ärenden</mbsc-listview-item>
+      </mbsc-listview>
+  </mbsc-popup>
 
-<mbsc-popup [options]="newCasePopupSettings" #newCasePopup="mobiscroll">  
-    <mbsc-listview [options]="templatesListSettings" #templatesListView="mobiscroll">
-      <ng-container *ngFor="let node of templateNodes">
-          <mbsc-listview-item *ngIf="!isCategory(node)" (click) ="openTemplate(node.id)">{{ node.name }}</mbsc-listview-item>
-          <mbsc-listview-item *ngIf="isCategory(node)"><span>{{ node.name }}</span>
-            <mbsc-listview-sublist>
-              <mbsc-listview-item *ngFor="let template of node.items" (click) ="openTemplate(template.id)">
-                {{ template.name }}
-              </mbsc-listview-item>
-            </mbsc-listview-sublist>
-        </mbsc-listview-item>
-      </ng-container>
-    </mbsc-listview>
-</mbsc-popup>
+  <mbsc-popup [options]="newCasePopupSettings" #newCasePopup="mobiscroll">  
+      <mbsc-listview [options]="templatesListSettings" #templatesListView="mobiscroll">
+        <ng-container *ngFor="let node of templateNodes">
+            <mbsc-listview-item *ngIf="!isCategory(node)" (click) ="openTemplate(node.id)">{{ node.name }}</mbsc-listview-item>
+            <mbsc-listview-item *ngIf="isCategory(node)"><span>{{ node.name }}</span>
+              <mbsc-listview-sublist>
+                <mbsc-listview-item *ngFor="let template of node.items" (click) ="openTemplate(template.id)">
+                  {{ template.name }}
+                </mbsc-listview-item>
+              </mbsc-listview-sublist>
+          </mbsc-listview-item>
+        </ng-container>
+      </mbsc-listview>
+  </mbsc-popup>
 </mbsc-form>
