#68281- Show comment section (ballon) expanded if new comment;

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -138,6 +138,7 @@
         extendedCaseFormId: '@(Model.ExtendedCaseDataModel.FormModel.Id)',
         extendedCaseLanguageId: '@(Model.ExtendedCaseDataModel.FormModel.LanguageId)',
         extendedCasePath: '@(Model.ExtendedCaseDataModel.FormModel.Path)',
+        extendedCaseInvalidMessage: '@Translation.GetForJS("Case is not valid")',
         userRole: '@(Model.UserRole)',
         caseStatus: '@(Model.StateSecondaryId)',
         currentUser: '@(Model.CurrentUser)',
