#69383 - Edit field - User id - logic to collect initiator information;

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/test/test.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/test/test.component.html
@@ -1,6 +1,35 @@
+
+
 <mbsc-form class="mbsc-padding">
+   <mbsc-form-group>
+      <mbsc-form-group-content>
+
+        <mbsc-input id="notifierInput" #notifierInput        
+            input-style="outline"     
+            placeholder="Enter user name">Input</mbsc-input>
+
+        <mbsc-select [options]="options" [data]="items" #notifiersSelect="mobiscroll"></mbsc-select>
+
+      </mbsc-form-group-content>
+  </mbsc-form-group>
+</mbsc-form>  
+<!-- 
 
 
+  <mbsc-form-group>
+      <label>separator</label>
+  </mbsc-form-group>
+  <mbsc-form-group>
+      <mbsc-form-group-content>
+          <input id="notifierInput2" type="text" style="border:solid 1px red" />
+          <input mbsc-select [mbsc-options]="options3" [mbsc-data]="items"  />
+          
+      </mbsc-form-group-content>
+  </mbsc-form-group>
+
+  <mbsc-form-group>
+    <mbsc-button color="primary" (click)="select.instance.show()">Test</mbsc-button> 
+  </mbsc-form-group>
   <mbsc-listview [options]="listviewSettings">
     <mbsc-listview-item *ngFor="let conti of data">
         {{conti.name}}
@@ -11,6 +40,4 @@
         </mbsc-listview-sublist>
     </mbsc-listview-item>
   </mbsc-listview>
-
-  <mbsc-button color="primary" (click)="onLogout()">Logout</mbsc-button>
-</mbsc-form>
+  -->
