--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/textarea/case-textarea-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/textarea/case-textarea-control.component.html
@@ -1,3 +1,3 @@
 <ng-container [formGroup]="form">
-    <mbsc-textarea #input [formControlName]="field.name">{{ field.label }}{{ requiredSymbol }}</mbsc-textarea> 
+    <mbsc-textarea #input [formControlName]="field.name" [error]="getErrorState()" [errorMessage]="getErrorMessage(field.name)">{{ field.label }}{{ requiredSymbol }}</mbsc-textarea> 
 </ng-container>
