#69383 - Edit field - User id - logic to collect initiator information;

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/notifier-search/notifier-search.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/notifier-search/notifier-search.component.html
@@ -1,9 +1,9 @@
 <ng-container [formGroup]="form">
 
-  <mbsc-input id="notifierInput" #notifierInput [formControlName]="field.name"
-      placeholder="Search user">{{field.label}}{{ requiredSymbol }}</mbsc-input>
+  <mbsc-input id="notifierInput" #notifierInput 
+      [formControlName]="field.name">{{field.label}}{{ requiredSymbol }}</mbsc-input>
 
-  <mbsc-select [options]="selectOptions" #notifierSelect></mbsc-select>
+  <mbsc-select #notifierSelect [options]="selectOptions" [data]="notifiersData"></mbsc-select>
 
 </ng-container>
 
