#69370- Control for multilevel - build fix with prod arg

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/dropdown/case-multi-dropdown-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/dropdown/case-multi-dropdown-control.component.html
@@ -1,4 +1,4 @@
-<mbsc-textarea #textbox [(ngModel)]="text" [readonly]="true" (click)="openSelect()" [ngClass]="select-input">{{ field.label }}{{ requiredSymbol }}</mbsc-textarea> 
+<mbsc-textarea #textbox [(ngModel)]="text" [readonly]="true" (click)="openSelect()" [ngClass]="'select-input'">{{ field.label }}{{ requiredSymbol }}</mbsc-textarea> 
 <ng-container [formGroup]="form">
   <mbsc-select #select [formControlName]="field.name" [options]="settings"></mbsc-select>
 </ng-container>
