69383 - Edit field - User id - logic to collect initiator information; Fixed readonly state in lock mode;

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/notifier-search/notifier-search.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/notifier-search/notifier-search.component.html
@@ -3,7 +3,9 @@
   <mbsc-input id="notifierInput" #notifierInput 
       [formControlName]="field.name">{{field.label}}{{ requiredSymbol }}</mbsc-input>
 
+<ng-container *ngIf="!isFormControlDisabled">
   <mbsc-select #notifierSelect [options]="selectOptions" [data]="notifiersData"></mbsc-select>
+</ng-container>
 
 </ng-container>
 
