--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -261,8 +261,16 @@ ul.nostyle {
   .mbsc-lv-item-ic-left:after { left:0px; }
   .mbsc-ic:before {   margin-right: 8px; }
   .mbsc-lv-item.mbsc-lv-item-ic-left {
-    padding: 12px 0 12px 20px!important;    
+    padding: 12px 0 12px 20px!important;
   }
 }
 
-
+mbsc-textarea {
+  &.select-textarea {
+    .mbsc-textarea {
+      textarea {
+        height: 1.5em;
+      }
+    }
+  }
+}
