--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files/case-files-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files/case-files-control.component.html
@@ -1,7 +1,7 @@
 <div class="case-subsection">
   <span class="mbsc-label case-subsection-title" translate>Bifogad fil</span>  
   <div id="case-files" class="fileList">
-    <mbsc-listview [options]="fileListSettings">
+    <mbsc-listview [options]="fileListSettings" #fileList>
       <mbsc-listview-item *ngFor="let item of files; trackBy: identify" 
           icon="fa-paperclip"
           (click)="downloadFile(item)">{{ item.fileName }}</mbsc-listview-item>
