#69430 - Edit mode - Date fields

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/date/case-date-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/date/case-date-control.component.html
@@ -1,2 +1,2 @@
-<!-- <mbsc-date #date [(ngModel)]="value" [options]="options" [hidden]="options.disabled">{{ field.label }}</mbsc-date> -->
-<mbsc-input #control [ngModel]="value | dateFormat" >{{ field.label }}</mbsc-input>
+<mbsc-calendar #date [(ngModel)]="value" [options]="options">{{ field.label }}</mbsc-calendar>
+<!-- <mbsc-input #control [ngModel]="value | dateFormat" >{{ field.label }}</mbsc-input> -->
