--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/dropdown/case-dropdown-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/dropdown/case-dropdown-control.component.html
@@ -1,4 +1,6 @@
 <ng-container [formGroup]="form">
-  <mbsc-select #control [formControlName]="field.name" [options]="settings" [data]="localDataSource">{{ getHeader }}{{ requiredSymbol }}</mbsc-select>
+  <mbsc-select #control [formControlName]="field.name" class="dhselect"
+              [options]="settings" 
+              [data]="localDataSource">{{ getHeader }}{{ requiredSymbol }}</mbsc-select>
 </ng-container>
 <!-- <mbsc-input #control [(ngModel)]="text">{{ field.label }}</mbsc-input> -->
