#69381 - Case - fields mandatory #69382 - No limitation in field length

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/date/case-date-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/date/case-date-control.component.html
@@ -1,2 +1,2 @@
-<mbsc-calendar #date [(ngModel)]="value" [options]="options">{{ field.label }}</mbsc-calendar>
+<mbsc-calendar #date [(ngModel)]="value" [options]="options">{{ formControl.label }}</mbsc-calendar>
 <!-- <mbsc-input #control [ngModel]="value | dateFormat" >{{ field.label }}</mbsc-input> -->
