--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/dropdown/case-dropdown-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/dropdown/case-dropdown-control.component.html
@@ -1,6 +1,8 @@
 <ng-container [formGroup]="form">
   <mbsc-select #control [formControlName]="field.name" class="dhselect"
-              [options]="settings" 
-              [data]="localDataSource">{{ getHeader }}{{ requiredSymbol }}</mbsc-select>
+              [options]="settings"
+              [data]="localDataSource"
+              [error]="getErrorState()"
+              [errorMessage]="getErrorMessage()">{{ getHeader }}{{ requiredSymbol }}</mbsc-select>
 </ng-container>
 <!-- <mbsc-input #control [(ngModel)]="text">{{ field.label }}</mbsc-input> -->
