--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/notifier-search/notifier-search.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/notifier-search/notifier-search.component.html
@@ -1,7 +1,7 @@
 <ng-container [formGroup]="form">
 
   <mbsc-input id="notifierInput" #notifierInput 
-      [formControlName]="field.name">{{field.label}}{{ requiredSymbol }}</mbsc-input>
+      [formControlName]="field.name">{{ formControl.label }}{{ requiredSymbol }}</mbsc-input>
 
   <ng-container *ngIf="!isFormControlDisabled">
     <mbsc-select #notifierSelect class="dhselect noinput" [options]="selectOptions" [data]="notifiersData"></mbsc-select>
